[tool.poetry]
name = "musicsync"
version = "0.1.1"
description = "Synchronize an Apple Music playlist to an external volume"
authors = ["Tom Shafer <tom@tshafer.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.1"
flake8 = "^6.0.0"
isort = "^5.12.0"
ipython = "^8.11.0"

[tool.poetry.scripts]
musicsync = "musicsync:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
